[package]
name = "intmap"
version = "2.0.0"
edition = "2018"
description = "Specialized HashMap for u64 keys"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JesperAxelsson/rust-intmap"
keywords = ["hashmap", "u64", "intmap"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"
indexmap = "1.8.2"
ahash = "0.8.11"
hashbrown = "0.14.5"

[package.metadata.docs.rs]
features = ["serde"]
