[package]
name = "intmap"
version = "2.0.0"
edition = "2021"
rust-version = "1.58"
description = "Specialized HashMap for u64 keys"
authors = ["Jesper Axelsson <jesperaxe@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/JesperAxelsson/rust-intmap"
keywords = ["hashmap", "u64", "intmap"]

[dependencies]
num-traits = "0.2.18"
serde = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8.5"

[package.metadata.docs.rs]
features = ["serde"]
