[package]
name = "intmap-integration-test-benchmark"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dev-dependencies]
ahash = "0.8.11"
divan = "0.1.14"
hashbrown = "0.15.2"
indexmap = "2.9.0"
intmap = { path = "../.." }
rand = "0.8.5"
rustc-hash = "2.1.1"

[[bench]]
name = "basic_bench"
harness = false

[[bench]]
name = "key_comparison"
harness = false
